--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 .titre{
 	font-size:30px;
     font-family: 'Kalam', cursive;
+vertical-align: center;
 
 }
 .main{
 	text-align: center;
 }
 .banner{
-	margin-right:0;
+	margin-left:500px;
+
 }
