--- a/style.css
+++ b/style.css
@@ -1,13 +1,26 @@
+.banner{
+display: inline;
+vertical-align:middle;
+margin-left:500px;
+}
 .titre{
 	font-size:30px;
     font-family: 'Kalam', cursive;
-vertical-align: center;
+    font-style: bold;
+	
 
 }
 .main{
 	text-align: center;
+	background-color:gray;	
 }
-.banner{
-	margin-left:500px;
 
+.date{
+	font-size: 12px;
+	font-style: italic;
+	color:red;
+}
+.foot{
+	text-align:right;
+	font-size:30px;
 }
